# rvim

./: Cargo.toml  README.md  config.lua  makefile
config/: config.lua  nvim_compat.lua
doc/: DOC.md
src/: error.rs  main.rs
src/cli/: buffer.rs  editor.rs  filetree.rs  mod.rs  plugin.rs  shell.rs  tabs.rs  window.rs
src/lsp/: mod.rs
~/.config/rvim/config/: config.lua  nvim_compat.lua
